# bot

./: .env.example  .gitignore  1.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_dialogue_tracking_fields.py  003_add_campaign_sending_settings.py  004_add_follow_up_enabled.py  005_add_is_premium.py  006_add_account_source.py  007_add_warmup_tables.py  008_add_telegram_apps.py  009_add_unique_proxy_per_account.py  010_add_daily_reset_hour.py  011_add_hourly_responses_count.py
src/application/: __init__.py  prompts.py
src/application/interfaces/: __init__.py  repository.py
src/application/services/: __init__.py  account_auth.py  account_profile.py  account_service.py  campaign_service.py  dialogue_processor.py  dialogue_service.py  premium_service.py  scraper_service.py
src/commentbot/: __init__.py  config.py
src/commentbot/application/: __init__.py
src/commentbot/domain/: __init__.py
src/commentbot/infrastructure/: __init__.py
src/commentbot/presentation/: __init__.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  exceptions.py
src/domain/entities/: __init__.py  account.py  base.py  campaign.py  dialogue.py  proxy.py  scrape_task.py  telegram_app.py  user_target.py  warmup.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  openai_provider.py
src/services/: premium_service.py  warmup_service.py
src/utils/: __init__.py  crypto.py  humanizer.py  target_files.py
src/workers/: __init__.py  account_worker.py  account_worker_v2.py  background_activity.py  main.py  manager.py  manager_v2.py  natural_worker.py  scheduler.py  task_queue.py  warmup_worker.py
tests/: conftest.py
(+79 files in other folders)
