[project]
name = "telegram-outreach-system"
version = "0.1.0"
description = "Multi-account Telegram outreach system with AI-powered dialogues"
requires-python = ">=3.10"
dependencies = [
    # Telegram
    "aiogram>=3.4.0",
    "telethon>=1.34.0",
    "python-socks[asyncio]>=2.4.0",  # For Telethon proxy support
    "opentele>=1.15.0",  # For tdata to Telethon session conversion
    
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Redis
    "redis>=5.0.0",
    "arq>=0.25.0",
    
    # AI
    "openai>=1.12.0",
    
    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    
    # Security
    "cryptography>=42.0.0",
    
    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.4",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
